# cracedetect

./: .gitignore  .gitmodules  .ruby-gemset  CMakeLists.txt  Gemfile  Gruntfile.js  Makefile  README.md  package.json  watch.rb
include/: configuration.h  detector.h  environment.h  errors.h  face.h  recognizer.h  tracker.h  utils.h
src/: CMakeLists.txt  algorithm.cpp  algorithm.h  configuration.cpp  detector.cpp  detector.h  environment.cpp  environment.h  errors.cpp  errors.h  face.cpp  face.h  main.cpp  recognizer.cpp  recognizer.h  tracker.cpp  tracker.h  utils.cpp  utils.h
test/: Makefile  algorithm_unittest.cpp
